Update JS emulator and add Unicode image

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"images": ["MinimalDiskImage", "FullDiskImage", "VanillaDiskImage", "ExperimentalOberonDiskImage", "ColorDiskImage", "ColorBigmemDiskImage"]}
+{"images": ["MinimalDiskImage", "FullDiskImage", "VanillaDiskImage", "ExperimentalOberonDiskImage", "ColorDiskImage", "ColorBigmemDiskImage", "UnicodeDiskImage"]}
