JS emulator serial line update
Also including an image to boot from serial line and an Experimental
Oberon image that includes sources (as Build.Tool includes many examples
for serial line use).

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"images": ["MinimalDiskImage", "FullDiskImage", "VanillaDiskImage", "ExperimentalOberonDiskImage", "ColorDiskImage", "ColorBigmemDiskImage", "UnicodeDiskImage"]}
+{"images": ["MinimalDiskImage", "FullDiskImage", "VanillaDiskImage", "ExperimentalOberonDiskImage", "ExperimentalOberonDiskImageWithSource", "BootFromSerialLine", "ColorDiskImage", "ColorBigmemDiskImage", "UnicodeDiskImage"]}
